[package]
name = "iter-index"
description = "More flexible alternative to Iterator's enumerate() method"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"
authors = ["Redglyph"]
categories = ["rust-patterns"]
keywords = ["iterator", "trait-extension", "enumerate"]
documentation = "https://docs.rs/iter-index"
homepage = "https://github.com/blueglyph/iter_index"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blueglyph/iter_index"
readme = "README.md"

[dependencies]
